# aito-equity-demo

./: .env.example  .gitignore  CHEATSHEET.md  CHECKLIST.md  CLAUDE.md  README.md  aito-equity-demo-TASK.md  aito-equity-demo.html  do  pyproject.toml  shell.nix
assets/: README.md  teaser.html
book/: test_01_aito_schema_book.py  test_02_model_eval_book.py  test_03_feature_clustering_book.py  test_04_four_schools_book.py
books/: index.md
books/book/test_01_aito_schema_book.py/: test_aito_schema.md  test_aito_schema.snapshots.json
books/book/test_02_model_eval_book.py/: test_model_diagnostics.md
books/book/test_03_feature_clustering_book.py/: test_feature_clustering.md
books/book/test_04_four_schools_book.py/: test_four_schools.md
docs/: wide-feature-calibration.md  wide-feature-calibration.spec.json
frontend/: next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/prediction/: ConfidenceBar.tsx  LiftHint.tsx  PredictedField.tsx  PredictionBadge.tsx  WhyCards.tsx  WhyTooltip.tsx
frontend/components/shell/: AitoPanel.tsx  Analytics.tsx  ErrorState.tsx  LatencyBadge.tsx  Nav.tsx  TopBar.tsx
frontend/lib/: aito.ts  analytics.ts  api.ts  types.ts
frontend/scripts/: inspect-mobile.cjs  screenshot-pages.cjs  screenshot-teaser.cjs
pipeline/: __init__.py  outcomes.py
pipeline/aito/: __init__.py  client.py  load.py  queries.py  schema.json
pipeline/events/: earnings_extract.py  earnings_fetch.py  earnings_load.py  news_8k.py  post_filing.py
pipeline/extraction/: __init__.py  extract.py  sections.py
pipeline/extraction/prompts/: combined.md  leadership.md  market_position.md  market_quality.md  moat.md
pipeline/filings/: __init__.py  base.py  edgar.py
pipeline/fundamentals/: market_factors.py  sec_xbrl.py
pipeline/model/: emit_backtest.py  emit_error_analysis.py  emit_eval.py  eval_aito.py  eval_live.py  export_spec.py  featureclust.py
pipeline/prices/: __init__.py  base.py  delistings.csv  yfinance_source.py
pipeline/universe/: __init__.py  base.py  sp500.py
scripts/: __init__.py  _server.py  inspect_mobile.py  screenshot_pages.py  screenshot_teaser.py
site/: index.html
site/data/: backtest.json  calibration.json  companies.json  earnings_signals.json  error_analysis.json  eval.json  factor_explorer.json  leakage_probe.json  meta.json  news_reaction.json  relate.json  universe.json
site/data/match/: AAL_2017.json  COST_2017.json  META_2020.json  MMM_2017.json  NVDA_2014.json  (+2 more)
src/: aito_client.py  app.py  config.py
tests/: test_health.py
(+7 files in other folders)
